Finished Layout and routes

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,6 @@
-<% provide(:title, 'Contact Us') %>
-    <h1>Contact Us</h1>
-    <p>
-
-      To us see the about page of this sample app
-      <a href="http://secure-everglades-1977.herokuapp.com/static_pages/about">Sample App about page</a>.
-      To get help on this sample app, see the
-      <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
-    </p>
+<% provide(:title, 'Contact') %>
+<h1>Contact</h1>
+<p>
+  Contact Ruby on Rails Tutorial about the sample app at the
+  <a href="http://railstutorial.org/contact">contact page</a>.
+</p>
